WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132131
[New Multicolumn] client rects don't work with spans
https://bugs.webkit.org/show_bug.cgi?id=132131
Summary
[New Multicolumn] client rects don't work with spans
Dave Hyatt
Reported
2014-04-24 09:53:13 PDT
I should not have added in the offset of the multicolumn set in columnTranslationForOffset. This was already accounted for.
Attachments
Patch
(57.24 KB, patch)
2014-04-24 09:53 PDT
,
Dave Hyatt
no flags
Details
Formatted Diff
Diff
Patch
(57.57 KB, patch)
2014-04-24 09:55 PDT
,
Dave Hyatt
dino
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2014-04-24 09:53:48 PDT
Created
attachment 230087
[details]
Patch
WebKit Commit Bot
Comment 2
2014-04-24 09:55:32 PDT
Attachment 230087
[details]
did not pass style-queue: ERROR: LayoutTests/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] ERROR: Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 3 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dave Hyatt
Comment 3
2014-04-24 09:55:50 PDT
Created
attachment 230088
[details]
Patch
Dean Jackson
Comment 4
2014-04-24 09:58:01 PDT
Comment on
attachment 230088
[details]
Patch r+ but I think your image has the wrong mime type
Dave Hyatt
Comment 5
2014-04-24 10:03:09 PDT
Fixed in
r167764
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug