[New Multicolumn] Client rects don't work with column spans. https://bugs.webkit.org/show_bug.cgi?id=132131

Reviewed by Dean Jackson.

Source/WebCore:

Don't factor in the offset of the multicolumn set from the top
of the multicolumn block. This was added already, and it doesn't
need to be a part of columnTranslationForOffset.

Added fast/multicol/client-rects-spanners.html

* rendering/RenderMultiColumnSet.cpp:
(WebCore::RenderMultiColumnSet::columnTranslationForOffset):

LayoutTests:

* fast/multicol/client-rects-spanners.html: Added.
* platform/mac/fast/multicol/client-rects-spanners-expected.png: Added.
* platform/mac/fast/multicol/client-rects-spanners-expected.txt: Added.



Canonical link: https://commits.webkit.org/150178@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167764 268f45cc-cd09-0410-ab3c-d52691b4dbfc